# lellama

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
legrad/: CMakeLists.txt
legrad/backend/: metal_allocator.cpp  metal_allocator.h  metal_mgr.cpp  metal_mgr.h
legrad/backend/kernels/: common.metal
legrad/backend/metal/: CMakeLists.txt  definition.cpp
legrad/core/: allocator.cpp  allocator.h  buffer.h  dtype.h
legrad/internal/: array_view.h  enum_impl.h  func_cmp.h  half_type.h  pattern.h  view_pack.cpp  view_pack.h
legrad/internal/fp16/: README.md  bitcasts.h  fpt16.h  macros.h
legrad/macros/: expr.h  log.h
legrad/utils/: gguf_def.h  legrad_def.h
legrad/utils/gguf/: gguf_def.h  gguf_file.h
